# metadata-rust

./: Cargo.toml
src/: main.rs
