[package]
name = "metadata-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
little_exif = "0.1.1"
web3 = "0.18.0"
tokio = { version = "1.15.0", features = ["full"] }
secp256k1 = "0.21.0"
tracing-subscriber = "0.3.17"